--- a/restaurant_recommendation.ipynb
+++ b/restaurant_recommendation.ipynb
@@ -641,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Compute the similarities between a term that we enter and all restuarants in our list\n",
+    "# Compute the similarities between a term that we enter and all restaurants in our list\n",
     "\n",
     "search(cuisine) = takes the title or name we want to search for. So we want search for cuisine in this case \n",
     "\n",
